# meos

./: .gitignore  Cargo.toml  README.md  build.rs  link_script.ld  run_qemu.sh
crates/allocator/: Cargo.toml
crates/allocator/src/: bump_allocator.rs  common.rs  global_allocator.rs  lib.rs
crates/drivers/: Cargo.toml
crates/drivers/src/: driver.rs  driver_capabilities.rs  lib.rs  manager.rs  registry.rs
crates/drivers/src/drivers/: ns16550a.rs
crates/dtb/: Cargo.toml
crates/dtb/src/: lib.rs  parser.rs
crates/dtb_reader/: Cargo.toml
crates/dtb_reader/src/: lib.rs  reader.rs  reserve_entry.rs
crates/dtb_reader/src/tree/: children.rs  mod.rs  node.rs  properties.rs  tokens.rs
crates/kernel/: Cargo.toml
crates/kernel/src/: csr.rs  entry.s  interupts.rs  log.rs  main.rs  process.rs  time.rs
crates/kernel/src/asm/riscv64/: entry.s  switch.s
crates/log/: Cargo.toml
crates/log/src/: internal.rs  level.rs  lib.rs
src/: allocator.rs  main.rs
