[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
edition = "2024"

[workspace.dependencies]
kernel = { path = "./crates/kernel" }
allocator = { path = "./crates/allocator" }
dtb_reader = { path = "./crates/dtb_reader" }
log = { path = "./crates/log" }
drivers = { path = "./crates/drivers" }

spin = "0.10.0"
riscv = "0.15.0"
